--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -26,14 +26,13 @@
         <TextView
                 android:id="@+id/title"
                 android:layout_width="0dp"
-                android:textColor="#55555555"
-                android:textSize="24sp"
+                style="@style/TextAppearance.Title"
                 android:layout_height="wrap_content"
                 android:text="@string/about_google_developer_groups"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/image"
                 app:layout_constraintEnd_toStartOf="@+id/end_grid"
-                app:layout_constraintStart_toStartOf="@+id/start_grid" android:fontFamily="@font/lobster_two"/>
+                app:layout_constraintStart_toStartOf="@+id/start_grid"/>
 
         <TextView
                 android:id="@+id/intro_text"
@@ -49,8 +48,7 @@
                 android:id="@+id/subtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textColor="#55555555"
+                style="@style/TextAppearance.Subtitle"
                 android:text="@string/gdgs_are"
                 android:layout_marginTop="13dp"
                 app:layout_constraintStart_toEndOf="@id/start_grid"
