--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -42,8 +42,7 @@
                         android:textAppearance="?attr/textAppearanceHeadline6"
                         app:layout_constraintTop_toBottomOf="@id/image"
                         app:layout_constraintEnd_toStartOf="@+id/end_grid"
-                        app:layout_constraintStart_toStartOf="@+id/start_grid"
-                        android:fontFamily="@font/lobster_two"/>
+                        app:layout_constraintStart_toStartOf="@+id/start_grid" />
 
                 <TextView
                         android:id="@+id/intro_text"
