--- a/app/src/main/res/layout/add_gdg_fragment.xml
+++ b/app/src/main/res/layout/add_gdg_fragment.xml
@@ -29,7 +29,6 @@
                     android:layout_marginEnd="@dimen/spacing_normal"
                     android:contentDescription="@string/add_gdg"
                     android:text="@string/add_gdg"
-                    android:textColor="#AAAAAA"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -115,6 +114,10 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/region_label"
                     android:singleLine="true"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginBottom="4dp"
                     app:layout_constraintBottom_toTopOf="@+id/contentGroup"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +128,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/spacing_normal"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="@dimen/spacing_normal"
                     android:focusable="true"
                     android:orientation="vertical"
                     app:layout_constraintBottom_toTopOf="@+id/button"
@@ -159,16 +162,15 @@
 
             <Button
                     android:id="@+id/button"
-                    android:layout_width="40dp"
-                    android:layout_height="24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginEnd="40dp"
                     android:layout_marginBottom="12dp"
                     android:backgroundTint="#00FF00"
                     android:contentDescription="@string/submit_button_description"
                     android:onClick="@{() -> viewModel.onSubmitApplication()}"
-                    android:text="Ok"
-                    android:textColor="#FF0000"
-                    android:textSize="12sp"
+                    android:text="@string/submit"
+                    android:accessibilityLiveRegion="polite"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/contentGroup" />
